--- a/templates/rdv/_form.html.twig
+++ b/templates/rdv/_form.html.twig
@@ -32,7 +32,7 @@
 </div>
 <div class="grix">
     <div class="form-field">
-        {{form_label(form.date)}}
+        <div class="gray"> {{form_label(form.date)}} </div>
         {{form_widget(form.date , { 'attr': { 'id':'date' } })}}
     </div>
 </div>
