--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -36,7 +36,7 @@
                     {% else %}
                         <tr class='tr_color  select'>
                     {% endif %}
-                        <td>{{ client.date|date('d-m-Y H:i:s ') }}</td>
+                        <td>{{ client.date|format_datetime('long', 'short',locale='fr') }}</td>
                         <td>{{ client.personne }}</td>
                         <td>{{ client.nom }}</td>
                         <td>{{ client.prenom }}</td>
@@ -58,7 +58,7 @@
                         <td class="td-button">
                             <a class="btn btn-success btn-lg"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
                             <a class="btn btn-secondary btn-lg"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-                            <a class="btn btn-info btn-lg" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
+                            <a class="btn btn-info btn-lg" href="{{ path('client_clone', {'id': client.id}) }}"><img class="cloner" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
                     </tr>
