--- a/templates/emails/redemande_client_rdv.html.twig
+++ b/templates/emails/redemande_client_rdv.html.twig
@@ -6,7 +6,7 @@
 <p>
  <div style="font-size : 21 ; font-weight : bold; color : red;"> {{date|date('d F Y  H:i')|format_datetime('long', 'short',locale='fr')}}</div>  
 <p>
-   Vous recevrais un mail sous peu de confirmation de ce rendez-vous de notre part ou une nouvelle suggestion de date. 
+   Vous recevrez un mail sous peu de confirmation de ce rendez-vous de notre part ou une nouvelle suggestion de date. 
    Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce <a href="{{path('app_rdv_show', {'id': id})}}" >lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
 --------------------------------
