--- a/templates/depot/condition.html.twig
+++ b/templates/depot/condition.html.twig
@@ -66,7 +66,7 @@
                     </h2>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                       <p>Nous prenons en charge les PC portables, les PC de bureau ainsi que les imprimantes. De nombreux utilisateurs pensent que leur PC est trop vieux pour être réparé. Ce constat est relatif. En réalité, l’âge de votre ordinateur compte moins que la qualité du processeur et des autres composants installés. Il suffit souvent de procéder à un bon nettoyage et à une optimisation de votre ordinateur pour lui rendre sa performance initiale. Dans les cas les plus sévères, une réinitialisation de votre PC peut s’avérer nécessaire. Une maintenance d’ordinateur reste cependant largement plus rentable qu’un achat d’un ordinateur neuf de qualité. </p>
+                       <p>Nous prenons en charge les PC portables, les PC de bureau ainsi que les imprimantes. De nombreux utilisateurs pensent que leur PC est trop vieux pour être réparé. Ce constat est relatif. En réalité, l’âge de votre ordinateur compte moins que la qualité du processeur et des autres composants installés. Il suffit souvent de procéder à un bon nettoyage et à une optimisation de votre ordinateur pour lui rendre sa performance initiale. Dans les cas les plus sévères, une réinitialisation de votre PC peut s’avérer nécessaire. Une maintenance d’ordinateur reste cependant largement plus rentable qu’un achat d’un ordinateur neuf et réduit l'impact environnemental. </p>
                         </div>
                     </div>
                 </div>
