--- a/templates/rdv/index.html.twig
+++ b/templates/rdv/index.html.twig
@@ -67,7 +67,7 @@
                                     {% elseif "now"|date("d-m-Y") > rdv.date|date('d-m-Y') %}
                                         <span class="badge bg-secondary">Passé</span>
                                     {% endif %}
-                                    {{  rdv.date|date('d F Y  H:i')|format_datetime('long', 'short',locale='fr') }}
+                                    {{  rdv.date|date('d-m-Y  H:i') }}
                                     {{ include('rdv/confirmation_form.html.twig') }}
                                     <button type="button" class="mr-2 btn btn-warning btn-orange right white" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{rdv.id}}">
                                         <img  width="20px"  class='suggestion' src="{{asset('/images/suggestion.png')}}"/>
@@ -108,7 +108,7 @@
                             </div>
                             <div class="card-footer text-muted">
                                 
-                                {{  rdv.date|date('d F Y  H:i')|format_datetime('long', 'short',locale='fr') }}
+                                {{  rdv.date|date('d-m-Y  H:i') }}
                                 {#{{ include('rdv/confirmation_form.html.twig') }}
                                 <button type="button" class=" mr-2 btn btn-warning btn-orange right white" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{rdv.id}}">
                                     <img  class='suggestion' width="20px" src="{{asset('/images/suggestion.png')}}"/>
