--- a/templates/appel/new.html.twig
+++ b/templates/appel/new.html.twig
@@ -3,26 +3,35 @@
 {% block title %}Demande d'appel{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1>Demander à être rappelé</h1>
-       <div class="card p-50  mt-5 cardCall">
-            {{ include('appel/_form.html.twig') }}
-            {% for message in app.flashes('sucess')%}
-				<img src='{{asset('images/call.png')}}' class="call" width="200"/>
-				<div class="alert alert-success center" role="alert" id="sucessCall">
-					<span>{{message}}<span>
-				</div>
-			{% endfor %}
-        </div> 
-       <!-- <a href="{{ path('app_appel_index') }}">back to list</a> -->
-        <div class="loading" id="loadingCall">
-            <div class="loadingio-spinner-bean-eater-9bccoyxbzpc">
-                <div class="ldio-rd9g19yom4p">
-                    <div><div></div><div></div><div></div></div><div><div></div><div></div><div></div></div>
+<div class="container-fluid mb-100">
+    <a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
+
+        
+            <div id="hideCall">
+                <img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
+                <h1 class="mt-3">Demander à être rappelé</h1>
+            </div>
+            
+        <div class="card p-50  mt-5 cardCall"  style="margin:auto">
+                {{ include('appel/_form.html.twig') }}
+                {% for message in app.flashes('sucess')%}
+                    <img src='{{asset('images/call.png')}}' class="call" width="200"/>
+                    <div class="alert alert-success center" role="alert" id="sucessCall">
+                        <span>{{message}}<span>
+                    </div>
+                {% endfor %}
+            </div> 
+        <!-- <a href="{{ path('app_appel_index') }}">back to list</a> -->
+            <div class="loading" id="loadingCall">
+                <div class="loadingio-spinner-bean-eater-9bccoyxbzpc">
+                    <div class="ldio-rd9g19yom4p">
+                        <div><div></div><div></div><div></div></div><div><div></div><div></div><div></div></div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+
+</div>
+
 
     {% include 'layout/footer.html.twig' %}
 {% endblock %}
