--- a/templates/appel/_form.html.twig
+++ b/templates/appel/_form.html.twig
@@ -32,7 +32,7 @@
 	    </div>
     </div>
 	<div class="mb-3 mt-5 text-center">
-		<button type="submit" class="btn btn-dark btn-depot submit" >Valider</button>
+		<button type="submit" class="btn btn-responsive btn-dark btn-depot submit" >Valider</button>
 	</div>
 {{ form_end(form) }}
   
