--- a/templates/rdv/_form.html.twig
+++ b/templates/rdv/_form.html.twig
@@ -44,6 +44,6 @@
 </div>
 
 <div class="mb-3 mt-5 text-center">
-    <button type="submit" class="btn btn-dark btn-depot submit shadow-4" >Valider</button>
+    <button type="submit" class="btn btn-responsive btn-dark btn-depot submit shadow-4" >Valider</button>
 </div>
 {{ form_end(form) }}
