--- a/templates/rdv/client/new.html.twig
+++ b/templates/rdv/client/new.html.twig
@@ -3,9 +3,13 @@
 {% block title %}Demande de Rendez-vous{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1 class="mb-4">Demande de rendez-vous à domicile</h1>
-       <div class="card p-50  mt-5 cardRdv">
+<div class="container-fluid mb-100">
+    <a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
+    <div id="hideRdv">
+        <img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
+        <h1 class="mt-3 mb-4">Demande de rendez-vous à domicile</h1>
+    </div>
+       <div class="card p-50  mt-5 cardRdv"  style="margin:auto">
             {{ include('rdv/_form.html.twig') }}
             
             {% for message in app.flashes('sucessRdv')%}
@@ -29,7 +33,7 @@
                 </div>
             </div>
         </div>
-    </div>
+</div>
 
     {% include 'layout/footer.html.twig' %}
 {% endblock %}
