--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -8,7 +8,7 @@
 	<div class="container-fluid mb-100">
 		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
 		<div id="hide">
-			<img class="img-center" src="{{asset('./images/azertylogo.png')}}" width="20px"/>
+			<img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
 			<h1 class="mt-3">Formulaire de dépôt d’appareils informatiques</h1>
 		</div>
 		<div class="card cardDepot" style="margin:auto">
