--- a/templates/emails/mailEtat.html.twig
+++ b/templates/emails/mailEtat.html.twig
@@ -60,7 +60,7 @@
 {% endif %}
 
 {% if etat != 'Devis envoyée' %}
-	<h3 style='color:blue'>Votre appareil est :
+	<h3 style='color:blue' class="mt-4">Votre appareil est :
 		{{etat}}</h3>
 {% else %}
 	<h3 style='color:blue'>Un devis vous à été envoyée</h3>
