--- a/public/css/public/appel/new.css
+++ b/public/css/public/appel/new.css
@@ -21,7 +21,7 @@
 	}
 
 }
-.cardCall{
+.cardCallNew{
   width: 60%; 
   margin:auto !important;
   margin-bottom:150px; 
@@ -29,7 +29,7 @@
 }
 @media screen and (max-width: 1000px)
 {
-    .cardCall{
+    .cardCallNew{
         /*width: 70%;*/ 
         width: 95%; 
         font-size: 40px !important;
@@ -37,15 +37,15 @@
         margin-bottom:300px; 
         padding : 40px;
     }
-    .cardCall .btn-responsive{
+    .cardCallNew .btn-responsive{
         padding: 20px !important;
         font-size: 50px !important;
     }
-    .cardCall .form-control {
+    .cardCallNew .form-control {
        height: 120px;
        font-size: 40px !important;
     }
-    .cardCall label {
+    .cardCallNew label {
         font-size: 30px !important;
      }
     
