--- a/public/css/public/rdv/new.css
+++ b/public/css/public/rdv/new.css
@@ -1,5 +1,5 @@
-.cardRdv{
-    width: 60%; 
+.cardRdvNew{
+    width: 60% !important; 
     margin:auto !important;
     margin-bottom:150px; 
     padding : 30px;
@@ -10,7 +10,7 @@
  
 @media screen and (max-width: 1000px)
 {
-    .cardRdv{
+    .cardRdvNew{
         /*width: 70%;*/ 
         width: 95%; 
         font-size: 40px !important;
@@ -18,15 +18,15 @@
         margin-bottom:300px; 
         padding : 40px;
     }
-    .cardRdv .btn-responsive{
+    .cardRdvNew .btn-responsive{
         padding: 20px !important;
         font-size: 50px !important;
     }
-    .cardRdv .form-control {
+    .cardRdvNew .form-control {
        height: 120px;
        font-size: 40px !important;
     }
-    .cardRdv label {
+    .cardRdvNew label {
         font-size: 30px !important;
      }
      #rdv_date_date_month, #rdv_date_date_day,#rdv_date_date_year,#rdv_date_time_hour,#rdv_date_time_minute{
