--- a/templates/emails/confirmation_rdv.html.twig
+++ b/templates/emails/confirmation_rdv.html.twig
@@ -6,8 +6,9 @@
 <p>   
 {{ adresse }} {{cp}}
 </p>
-<p>
- Le : <div style="font-size : 21 ; font-weight : bold; color : red;"> {{date|date('d-m-Y  H:i') }}</div>  
+<p style="display: inline;">
+ Le : <div style="font-size : 21 ; font-weight : bold; color : red;  display: inline;"> {{date|date('d-m-Y  H:i') }}</div>  
+</p>
 
 <p>
     Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce <a href="https://site-interne.alwaysdata.net/rdv/public/{{id}}"  target="_blank">lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
