--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,7 @@
 	@import url("public/appel/new.css");
 	/*rdv*/
 	@import url("public/rdv/new.css");
+	@import url("public/rdv/show.css");
 	/*layout*/
 	@import url("public/layout/footer.css");
 /*base*/
