--- a/templates/emails/mailEtat.html.twig
+++ b/templates/emails/mailEtat.html.twig
@@ -60,10 +60,9 @@
 {% endif %}
 
 {% if etat != 'Devis envoyée' %}
-	<h3 style='color:blue' class="mt-4">Votre appareil est :
-		{{etat}}</h3>
+	<h3 style='color:blue; margin-top : 10px' >Votre appareil est : {{etat}}</h3>
 {% else %}
-	<h3 style='color:blue'>Un devis vous à été envoyée</h3>
+	<h3 style='color:blue;  margin-top : 10px'>Un devis vous à été envoyée</h3>
 {% endif %}
 
 <div>
