--- a/templates/rdv/client/annulation_client_form.html.twig
+++ b/templates/rdv/client/annulation_client_form.html.twig
@@ -1,3 +1,3 @@
 <form method="post" class="right" id="formRdvAnnuler" action="{{ path('app_rdv_annuler_client', {'id': rdv.id}) }}" {#onsubmit="return confirm('Are you sure you want to delete this item?');"#}>
-    <button class="btn btn-secondary mr-2" name="annuler">Annuler</button>
+    <button class="btn responsive-btn btn-secondary mr-2" name="annuler">Annuler</button>
 </form>
