--- a/templates/rdv/client/confirmation_client_form.html.twig
+++ b/templates/rdv/client/confirmation_client_form.html.twig
@@ -1,3 +1,3 @@
 <form method="post" class="right" id="formRdvConfirmationCleint" action="{{ path('app_rdv_confirmer_client', {'id': rdv.id}) }}" {#onsubmit="return confirm('Are you sure you want to delete this item?');"#}>
-    <button class="btn btn-success" name="confirmer">Confirmer</button>
+    <button class="btn responsive-btn btn-success" name="confirmer">Confirmer</button>
 </form>
