--- a/templates/rdv/client/show.html.twig
+++ b/templates/rdv/client/show.html.twig
@@ -47,7 +47,7 @@
                                 <span class="badge bg-warning right" style="background-color: #c2820b;">{{sugestion}}</span> 
                                 <span class="badge bg-secondary right">{{annulation}}</span> 
                             </h5>
-                            <h5 class="card-title">
+                            <h5 class="card-title title-name">
                                 {{ rdv.nom|upper }} {{ rdv.prenom|capitalize }}
                             </h5>
                             <p class="card-text"><a class="none" href="tel:~{{ rdv.tel }}">{{ rdv.tel }}</a></p>
@@ -58,12 +58,17 @@
                         <div class="card-footer text-muted">
                             {{  rdv.date|date('d F Y  H:i') }}
                             {% if rdv.confirmer == 2 or rdv.confirmer == 4 %}
-                                {{ include('rdv/client/confirmation_client_form.html.twig') }}
-                                <button type="button" class="mr-2 btn btn-warning btn-orange right white" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{rdv.id}}">
-                                    Changer la date
-                                </button>
+                            <div class="inline-button">
+                                    {{ include('rdv/client/confirmation_client_form.html.twig') }} 
+                                    <button type="button" class="responsive-btn mr-2 btn btn-warning btn-change-date btn-orange right white" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{rdv.id}}">
+                                        Changer la date
+                                    </button>
+                            </div>
                             {% elseif rdv.confirmer != 5 %}
-                                {{ include('rdv/client/annulation_client_form.html.twig') }}
+                            <div class="inline-button">
+                                <div class="right"> {{ include('rdv/client/annulation_client_form.html.twig') }} </div>
+                            </div>
+                               
                             {% endif %}
                           
                         </div>
