resolves prblm access

--- a/templates/rdv/client/show.html.twig
+++ b/templates/rdv/client/show.html.twig
@@ -15,7 +15,7 @@
         <img class="img-center" src="{{asset('./images/azertylogo.png')}}"/>
     </div>
     <div class="container">
-        <h1>Intervention à domicile</h1>
+        <h1 class="h1CardRdv">Intervention à domicile</h1>
         {% if rdv.do != 1 %}
             {% if  rdv.confirmer == 1 or  rdv.confirmer == 2 or  rdv.confirmer == 3 or  rdv.confirmer == 5 %}
                 {% set confirmer = '' %}
