--- a/templates/rdv/client/suggestion_date_client.html.twig
+++ b/templates/rdv/client/suggestion_date_client.html.twig
@@ -1,4 +1,4 @@
-<div class="modal fade" id="staticBackdrop{{rdv.id}}" data-bs-backdrop="static" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade modal-responsive" id="staticBackdrop{{rdv.id}}" data-bs-backdrop="static" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 <div class="modal-dialog modal-dialog-centered">
 <div class="modal-content">
     <div class="modal-header">
@@ -9,7 +9,7 @@
     <form method="post" class ='form-material formRdvEditDateClient' action="{{ path('app_rdv_edit_date_client', {'id': rdv.id}) }}">
         <input  class="form-control" type="datetime-local" name="datetime">
         <div class="mb-3 mt-5 text-center">
-        <button  class="btn btn-dark btn-depot submit shadow-4">valider</button>
+        <button class="btn responsive-btn btn-dark btn-depot submit shadow-4">valider</button>
         </div>
     </form>
     </div>
