--- a/public/css/public/rdv/show.css
+++ b/public/css/public/rdv/show.css
@@ -33,5 +33,9 @@
     .btn-close {
         margin-top: -70px !important;
     }
+    .alert-responsive{
+        font-size: 35px !important;
+        padding: 20px;
+    }
     
 }
