--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% include 'layout/navbar.html.twig' %}
-    <div class="container mb-100">
+    <div class="container-fluid mb-100">
             <h1 >Clients</h1>
             <table class="table">
                 <thead>
@@ -42,9 +42,9 @@
                         <td>{{ client.appareil.ns }} </td>
                         <td>{{ client.appareil.mdp }} </td>
                         {% if client.appareil.chargeur == 1 %}
-                        <td> <img  class='check' src="{{asset('./images/check.png')}}"/></td>
+                        <td> <img  class='check' src="{{asset('./images/check.png')}}" width="40px"/></td>
                         {% else %}
-                        <td>  <img  class='cross' src="{{asset('./images/cross.png')}}"/></td>
+                        <td>  <img  class='cross' src="{{asset('./images/cross.png')}}" width="40px"/></td>
                         {% endif %}
                         {% if client.appareil.editeur.etat.statut is defined %}
                         <td>{{ client.appareil.editeur.etat.statut}}</td>
@@ -53,10 +53,10 @@
                         {% endif %}
                         
 
-                        <td class="td-button">
-                            <a class="btn btn-success btn-lg" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
-                            <a class="btn btn-secondary btn-lg" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
-                            <a class="btn btn-info btn-lg" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
+                        <td class="td-button mw-250">
+                            <a class="btn btn-success" href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('./images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-secondary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
+                            <a class="btn btn-info" href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-cloner.png')}}"/></a>
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
                     </tr>
@@ -68,7 +68,7 @@
                 </tbody>
             </table>
 
-            <a  class="btn btn-success btn-lg" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+            <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
         </div>
     {% include 'layout/footer.html.twig' %}
 {% endblock %}
