--- a/templates/rdv/client/show.html.twig
+++ b/templates/rdv/client/show.html.twig
@@ -76,7 +76,7 @@
                 </div>
                 {{ include('rdv/client/suggestion_date_client.html.twig') }}
             {% else %}
-                <div class="alert alert-secondary" style="text-align:center" role="alert">
+                <div class="alert alert-secondary alert-responsive" style="text-align:center" role="alert">
                     Nous avons bien reçu votre demande ! Vous recevrez un mail très prochainement de confirmation de ce rendez-vous de notre part ou une nouvelle suggestion de date.
                 </div>
             {% endif %}
