--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -13,14 +13,13 @@
             <table class="table">
                 <thead>
                     <tr class='table_head'>
-                        <th>Date</th>
-                        <th>Personne</th>
+                        <th style="min-with : 50px !important">Date</th>
+                        <th>Civilité</th>
                         <th>Nom</th>
                         <th>Prenom</th>
                         <th>Télephone</th>
                         <th>Marque</th>
                         <th>Modele</th>
-                        <th>Numero de serie</th>
                         <th>Mot de passe</th>
                         <th>Chargeur</th>
                         <th>Etat</th>
@@ -36,29 +35,28 @@
                     {% else %}
                         <tr class='tr_color  select'>
                     {% endif %}
-                        <td>{{ client.date|date('d-m-Y  H:i') }}</td>
+                        <td>{{ client.date|date('d') {{titleMonth}} client.date|date('H:i')}}</td>
                         <td>{{ client.personne }}</td>
                         <td>{{ client.nom }}</td>
                         <td>{{ client.prenom }}</td>
                         <td>{{ client.tel }} </td>
                         <td>{{ client.appareil.marque }} </td>
                         <td>{{ client.appareil.modele }} </td>
-                        <td>{{ client.appareil.ns }} </td>
                         <td>{{ client.appareil.mdp }} </td>
                         {% if client.appareil.chargeur == 1 %}
-                        <td> <img  class='check' src="{{asset('/images/check.png')}}"/></td>
+                        <td> <img  class='check' src="{{asset('/images/check.png')}}" width="40px" /></td>
                         {% else %}
-                        <td>  <img  class='cross' src="{{asset('/images/cross.png')}}"/></td>
+                        <td>  <img  class='cross' src="{{asset('/images/cross.png')}}" width="40px" /></td>
                         {% endif %}
                         {% if client.appareil.editeur.etat.statut is defined %}
                         <td>{{ client.appareil.editeur.etat.statut}}</td>
                         {% else %}
                         <td>  </td>
                         {% endif %}
-                        <td>
-                            <a class="btn btn-success btn-sm"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
-                            <a class="btn btn-secondary btn-sm"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-                            <a class="btn btn-info btn-sm" href="{{ path('client_clone', {'id': client.id}) }}"><img class="cloner" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
+                        <td class="inline-button mw-250">
+                            <a class="btn btn-success"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
+                            <a class="btn btn-info" href="{{ path('client_clone', {'id': client.id}) }}"><img class="cloner" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
                     </tr>
