--- a/templates/appel/index.html.twig
+++ b/templates/appel/index.html.twig
@@ -24,7 +24,7 @@
                             <div class="card-footer text-muted">
                             {{  appel.date|date('d-m-Y H:i:s ') }}
                                 <div class="right"> {{ include('appel/_delete_form.html.twig') }} </div>
-                                <a class="btn btn-secondary right" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
+                                <a class="btn btn-secondary right mr-1" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
                             </div>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                             <div class="card-footer text-muted">
                             {{  appel.date|date('d-m-Y H:i:s ') }}
                             <div class="right"> {{ include('appel/_delete_form.html.twig') }} </div>
-                            <a class="btn btn-secondary right" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
+                            <a class="btn btn-secondary right mr-1" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
                             </div>
                         </div>
                     </div>
