--- a/templates/appel/index.html.twig
+++ b/templates/appel/index.html.twig
@@ -22,7 +22,7 @@
                                 <p class="card-text">{{ appel.message|capitalize }}</p>
                             </div>
                             <div class="card-footer text-muted">
-                            {{  appel.date|date('d-m-Y H:i:s ') }}
+                            {{  appel.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr') }}
                                 <div class="right"> {{ include('appel/_delete_form.html.twig') }} </div>
                                 <a class="btn btn-secondary right mr-1" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
                             </div>
@@ -52,7 +52,7 @@
                                 <p class="card-text">{{ appel.message|capitalize }}</p>
                             </div>
                             <div class="card-footer text-muted">
-                            {{  appel.date|date('d-m-Y H:i:s ') }}
+                            {{  appel.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr') }}
                             <div class="right"> {{ include('appel/_delete_form.html.twig') }} </div>
                             <a class="btn btn-secondary right mr-1" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('/images/icon-edit.png')}}"/></a>
                             </div>
