--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -34,7 +34,7 @@
                     {% else %}
                         <tr class='tr_color  select'>
                     {% endif %}
-                        <td>{{ client.date|date('d')}} {{titleMonth}} {{client.date|date('Y H:i')}}</td>
+                        <td>{{ client.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}</td>
                         <td>{{ client.personne }}</td>
                         <td>{{ client.nom }}</td>
                         <td>{{ client.prenom }}</td>
