--- a/templates/emails/redemande_client_rdv.html.twig
+++ b/templates/emails/redemande_client_rdv.html.twig
@@ -4,7 +4,7 @@
     Nous avons bien reçu votre demande d'intervention à l'adresse : {{ adresse }} avec la nouvelle date d'intervention : 
 </p>
 <p>
- <div style="font-size : 21 ; font-weight : bold; color : red;"> {{date|date('d-m-Y  H:i')}}</div>  
+ <div style="font-size : 21 ; font-weight : bold; color : red;"> {{date|date('D d M Y H:i')|format_datetime('long','short',locale='fr')}}</div>  
 </p>
 <p>
    Vous recevrez un mail sous peu de confirmation de ce rendez-vous de notre part ou une nouvelle suggestion de date. 
